--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>Archeio</title>
+    <title>Archive</title>
     <link href = "css/style.css" rel="stylesheet" type="text/css" />
 
 </head>
