--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>Vaserfal</title>
+    <title>Home</title>
     <link href = "css/style.css" rel="stylesheet" type="text/css"/>
 
 </head>
