--- a/index.html
+++ b/index.html
@@ -1,59 +1,112 @@
 <!DOCTYPE html>
-<html>
-
-<div class="container">
-
+<html lang="en">
 <head>
 
+    <!-- Basic Page Needs
+    ================================================== -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Home</title>
-    <link href = "css/style.css" rel="stylesheet" type="text/css"/>
+
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="keywords" content="">
+
+    <!-- Mobile Specific Metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Favicon
+    ================================================== -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+
+    <!-- Stylesheets
+    ================================================== -->
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
-
 <body>
 
-    <header>
-      
-        <div class="main">
+    <header id="masthead" class="site-header">
+        <nav id="primary-navigation" class="site-navigation">
+            <div class="container">
+
+                <div class="navbar-header">
+                   
+                    <a class="site-title"><span>CCOM</span>4029</a>
+
+                </div><!-- /.navbar-header -->
+
+                <div class="collapse navbar-collapse" id="agency-navbar-collapse">
+
+                    <ul class="nav navbar-nav navbar-right">
+
+                        <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
+                        <!-- <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a> -->
+
+                            <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                              <li><a href="portfolio.html">Portfolio</a></li>
+                              <li><a href="blog.html">Blog</a></li>
+                            </ul> -->
+
+                        </li>
+                        <li><a href="https://github.com/FrancisKRZ"  target="_blank" > My GitHub</a></li>
+                        <!-- <li><a href="blog.html">Blog</a></li> -->
+                        <!-- <li><a href="contact.html">Contact</a></li> -->
+                        <!-- <li><a href="ui-elements.html">UI Elements</a></li> -->
+
+                    </ul>
+
+                </div>
+
+            </div>   
+        </nav><!-- /.site-navigation -->
+    </header><!-- /#mastheaed -->
+
+    <div id="hero" class="hero overlay">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Welcome to my <br> GitHub page</h1>
+                <p>This is a work-in-progress for an upcoming project</p>
+                <a href="#" class="btn btn-border">TBD</a>
+            </div><!-- /.hero-text -->
+        </div><!-- /.hero-content -->
+    </div><!-- /.hero -->
+
+   <!-- Cut Content Goes Here -->
 
 
-            <ul>
-                <li class="active"><a href="index.html">Home</a> </li>
-                <li><a href="https://github.com/FrancisKRZ"   target="_blank"   >GitHub</a> </li>
-                <!-- <li><a href="index.html"  target="_blank" >TBD</a> </li> -->
-            </ul>
-        </div>
 
-        <div class="title">
-            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome!</h1>
-            <div class="ParagraphWrapData">
-            <p style="font-size:160%; text-align: center; color:aliceblue ">
+    <!-- Until Here -->
 
-                My github homepage!
-                <br> Seems like we're going to be doing
-                <br> lots of fun things in the future to come!
-
-                </p>
-
-            </div>
-        </div>
-
-        <div class="button">
-            <a href="Penguin.jpeg" target="_blank" class="btn">Penguin!</a>
-            <a href="https://www.nationalgeographic.com/travel/destinations/europe/denmark/photos-icy-adventures-greenland/#/polarbear-ice-greenland.jpg" target="_blank" class="btn">Cool Pictures</a>
-        </div>
-
-    </header>
-
-
-   <!-- <div class="footer">
-        <p>Web-Makers: krzfrancesc@gmail.com </p>
-    </div>                                              -->
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap-select.min.js"></script>
+    <script src="assets/js/jquery.slicknav.min.js"></script>
+    <script src="assets/js/jquery.countTo.min.js"></script>
+    <script src="assets/js/jquery.shuffle.min.js"></script>
+    <script src="assets/js/script.js"></script> -->
+  
 </body>
-
-</head>
-
-</div>
-
 </html>
