Updated Version, following Professor's request utilizing pre-made CSS

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="hero-text">
                 <h1>Welcome to my <br> GitHub page</h1>
                 <p>This is a work-in-progress for an upcoming project</p>
-                <a href="#" class="btn btn-border">TBD</a>
+                <a href="Penguin.jpeg" target="_blank" class="btn btn-border"> ( o > o) </a>
             </div><!-- /.hero-text -->
         </div><!-- /.hero-content -->
     </div><!-- /.hero -->
