--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="hero-text">
                 <h1>Welcome to my <br> GitHub page</h1>
                 <p>This is a work-in-progress for an upcoming project</p>
-                <p>Hi, I'm Francisco Meléndez Laureano and I studied Computer Science.
+                <p>Hi, I'm Francisco J Meléndez Laureano and I study Computer Science.
                     
                     <br> I am in Computer Science because I've had a fascination with technology
                     since a young age, albeit more hardware & electronics related, and 
@@ -95,7 +95,7 @@
                     I did a little research on this and was hooked.
                     
                 </p>
-                <a href="Penguin.jpeg" target="_blank" class="btn btn-border"> ( o > o) </a>
+                <a href="Penguin.jpeg" target="_blank" class="btn btn-border">  My Resume </a>
             </div><!-- /.hero-text -->
         </div><!-- /.hero-content -->
     </div><!-- /.hero -->
@@ -115,21 +115,21 @@
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
-                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <h4 class="portfolio-item-title"> Project 1 </h4>
                         <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
-                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <h4 class="portfolio-item-title"> Project 2 </h4>
                         <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
-                        <h4 class="portfolio-item-title">Portfolio item</h4>
+                        <h4 class="portfolio-item-title"> Project 3 </h4>
                         <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
@@ -150,7 +150,7 @@
                 <p>TBD</p>
             </div>
             <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
-                <h3>Contact me</h3>
+                <h3>Contact Me</h3>
                 <ul class="list-unstyled contact-links">
                     <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:francisco.melendez4@upr.edu">francisco.melendez4@upr.edu</a></li>
                 </ul>
@@ -159,9 +159,6 @@
         </div>
     </div>
 </footer><!-- /#footer -->
-
-
-
 
 
 
