--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <div class="container">
 
                 <div class="navbar-header">
-                   
                     <a class="site-title"><span>CCOM</span>4029</a>
 
                 </div><!-- /.navbar-header -->
@@ -60,21 +59,21 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
-                        <!-- <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a> -->
+                        <!-- <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a> 
 
-                            <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                               <li><a href="portfolio.html">Portfolio</a></li>
                               <li><a href="blog.html">Blog</a></li>
-                            </ul> -->
+                            </ul> 
 
-                        </li>
+                        </li> -->
+
                         <li><a href="https://github.com/FrancisKRZ"  target="_blank" > My GitHub</a></li>
                         <!-- <li><a href="blog.html">Blog</a></li> -->
                         <!-- <li><a href="contact.html">Contact</a></li> -->
                         <!-- <li><a href="ui-elements.html">UI Elements</a></li> -->
 
                     </ul>
-
                 </div>
 
             </div>   
