Updating Portfolio Item(s)

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
                         <h4 class="portfolio-item-title"> Project 1 </h4>
+                        <p> This one! This webpage is part of the CCOM4029 Projects! 
+                            <br> Here we can put details about ourselves and our work from the course :)
+                        </p>
                         <a href="https://github.com/FrancisKRZ"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
