Updated Portfolio Item(s)

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
                         <h4 class="portfolio-item-title"> Project 2 </h4>
+                        <p> The Rummy Card Game! Made using Java
+                            <br> We learned about GUI's as well and many data structures from Java utilities.
+                        </p>
                         <a href="https://github.com/FrancisKRZ"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
@@ -130,6 +133,9 @@
                     <div class="portfolio-item">
                         <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
                         <h4 class="portfolio-item-title"> Project 3 </h4>
+                        <p> Paper Presentation
+                            <br> I chose to present a paper about High Level Languages in Small Devices.
+                        </p> 
                         <a href="https://github.com/FrancisKRZ"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </div><!-- /.portfolio-item -->
                 </div>
